...
    public var body: some View {
        NavigationStack {
            content
                .navigationTitle("To-Do")
                .toolbar {
                    ToolbarItem(placement: .primaryAction) {
                        Button("Add Task", systemImage: "plus") {
                            showingAddToDo = true
                        }
                    }
                }
                .sheet(isPresented: $showingAddToDo) {
                    AddToDoView { title, notes in
...
